--- a/static/index.html
+++ b/static/index.html
@@ -7,23 +7,23 @@
 </head>
 <body>
 
-  <!-- Exercicio 1 -->
+  <!-- Ejercicio 1 -->
   <p id="parrafo">Este es un texto dentro de un parrafo</p>
 
-  <!-- Exercicio 2 -->
+  <!-- Ejercicio 2 -->
   <div class="caja">Texto dentro de un div </div>
 
-  <!-- Exercicio 3 -->
+  <!-- Ejercicio 3 -->
   <ul id="lista-elementos">
     <li>Elemento 1</li>
     <li>Elemento 2</li>
     <li>Elemento 3</li>
   </ul>
 
-  <!-- Exercicio 4 -->
+  <!-- Ejercicio 4 -->
   <button id="boton-accion">Pulsa aquí</button>
 
-  <!-- Exercicio 5 -->
+  <!-- Ejercicio 5 -->
   <table id="tabla-ejemplo" border ="1">
     <thead>
       <tr>
@@ -36,7 +36,7 @@
         <td class="casilla-nombre">Juanita</td>
         <td>57</td>
         <td class="casilla-nombre">Pedro</td>
-        <td>23</td>
+        <td>24</td>
       </tr>
     </tbody>
   </table>
