--- a/static/index.html
+++ b/static/index.html
@@ -1,46 +1,34 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>DOM 0</title>
+  <meta charset="UTF-8">
+  <title>Ejercicios con eventos</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
   <!-- Ejercicio 1 -->
-  <p id="parrafo">Este es un texto dentro de un parrafo</p>
+  <h2>Ejercicio 1</h2>
+  <button id="botonSaludo">Haz clic aquí</button>
 
   <!-- Ejercicio 2 -->
-  <div class="caja">Texto dentro de un div </div>
+  <h2>Ejercicio 2</h2>
+  <p id="parrafo">Este es un texto cualquiera</p>
+  <button id="botonParrafo">Ver párrafo</button>
 
   <!-- Ejercicio 3 -->
-  <ul id="lista-elementos">
+  <h2>Ejercicio 3</h2>
+  <ul id="lista">
     <li>Elemento 1</li>
     <li>Elemento 2</li>
     <li>Elemento 3</li>
+    <li>Elemento 4</li>
+    <li>Elemento 5</li>
+    <li>Elemento 6</li>
   </ul>
-
-  <!-- Ejercicio 4 -->
-  <button id="boton-accion">Pulsa aquí</button>
-
-  <!-- Ejercicio 5 -->
-  <table id="tabla-ejemplo" border ="1">
-    <thead>
-      <tr>
-        <th id="cabecera">Nome</th>
-        <th>Idade</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td class="casilla-nombre">Juanita</td>
-        <td>57</td>
-        <td class="casilla-nombre">Pedro</td>
-        <td>24</td>
-      </tr>
-    </tbody>
-  </table>
+  <button id="botonLista">Ver lista</button>
 
   <script src="script.js"></script>
 </body>
 </html>
+
